--- a/.config/fcs/normal.css
+++ b/.config/fcs/normal.css
@@ -1,56 +1,129 @@
-/* namespace required, do not remove */
-@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
+#navigator-toolbox {
+  -moz-appearance: none;
+  background-color: transparent !important;
+  border-top: none;
+}
+.browser-toolbar:not(.titlebar-color),
+#tabbrowser-tabs:not([movingtab])
+  > .tabbrowser-arrowscrollbox
+  > .tabbrowser-tab
+  > .tab-stack
+  > .tab-background[multiselected='true']:-moz-lwtheme,
+#tabbrowser-tabs:not([movingtab])
+  > .tabbrowser-arrowscrollbox
+  > .tabbrowser-tab
+  > .tab-stack
+  > .tab-background[selected='true']:-moz-lwtheme,
+* {
+  --tab-line-color: var(--color1);
+  --tab-min-width: 76px;
+}
+#urlbar, #navigator-toolbox #searchbar {border: none !important;}
 
-#urlbar[breakout],
-#urlbar[breakout][breakout-extend] {
-  --urlbar-height: 28px !important;
-  --urlbar-toolbar-height: 30px !important;
-
-  width: 100% !important;
-  top: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important;
-  left: 0 !important;
+#urlbar:not(.megabar):not([focused='true']):-moz-lwtheme,
+#urlbar.megabar:not([focused='true']):-moz-lwtheme > #urlbar-background,
+#navigator-toolbox #searchbar:not(:focus-within):-moz-lwtheme,
+#navigator-toolbox {
+  border: none !important;
+}
+#urlbar:not(.megabar):-moz-lwtheme,
+#urlbar.megabar:-moz-lwtheme > #urlbar-background,
+#navigator-toolbox #searchbar:-moz-lwtheme {
+  background-color: var(--background) !important;
+}
+#navigator-toolbox {
+  --tabs-border-color: var(--background) !important;
 }
 
-#urlbar[breakout][breakout-extend] > #urlbar-input-container,
-#urlbar-input-container {
-  height: var(--urlbar-height) !important;
-  width: 100% !important;
-  padding-block: unset !important;
-  padding-inline: unset !important;
-  transition: none !important;
+toolbox {
+  z-index: 10;
+  margin-top: 0px !important;
+  margin-bottom: -30px !important;
+  height: 0 !important;
+  pointer-events: none;
 }
+vbox {pointer-events: all;}
 
-#urlbar[breakout][breakout-extend] > #urlbar-background {
-  box-shadow: 0 1px 4px rgba(0,0,0,.05) !important;
-  animation: none !important;
-}
-
-#tabbrowser-tabs, #tabbrowser-tabs > .tabbrowser-arrowscrollbox {
-    min-height: 0 !important;
-}
-#tabbrowser-tabs tab {
-    min-height: var(--tab-min-height)
-}
 
 #nav-bar {
-    height: 0px !important;
-    min-height: 0px !important;
-    overflow: hidden !important;
-    /* for mouse hover activation would need some height */
-    /* disable above height: 0px line and add: */
-    /* height: 3px !important; */
+  opacity: 0;
+  transform-origin: 0 0;
+  pointer-events: none;
+  transition: transform, ease-in-out 0.2s, opacity 0.2s ease-in-out !important;
 }
-/* for mouse hover activation need to add: */
-/* #nav-bar:hover, */
-#nav-bar:focus,
-#nav-bar:focus-within,
-#nav-bar:active {
-    height: auto !important;
+/* All the states in which the URL bar is visible */
+vbox:hover ~ #nav-bar, toolbox:focus-within > #nav-bar, #nav-bar:hover, #mainPopupSet:hover ~ box #nav-bar, #mainPopupSet:focus-within ~ box #nav-bar {
+  opacity: 1;
+  transform: none;
+  pointer-events: all;
 }
 
-/* remove right hand scrollbar */
-/*
-browser {
-    margin-right: -15px;
+/* REMOVE MEGABAR START
+ * VERSION 1.0.4
+ * CODE AT: http://userchrome.wesleybranton.com/megabar
+ * RELEASE NOTES: http://userchrome.wesleybranton.com/notes/megabar */
+
+:root { --toolbar-field-focus-border-color: transparent !important; }
+@-moz-document url(chrome://browser/content/browser.xhtml) {
+    /* DISABLE EXPANDING START */
+    #urlbar[breakout][breakout-extend] {
+        top: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important;
+        left: 0 !important;
+        width: 100% !important;
+    }
+    
+    #urlbar[breakout][breakout-extend] > #urlbar-input-container {
+        height: var(--urlbar-height) !important;
+        padding-block: 0 !important;
+        padding-inline: 0 !important;
+    }
+    
+    #urlbar[breakout][breakout-extend] > #urlbar-background {
+        animation-name: none !important;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, .05) !important;
+    }
+    /* DISABLE EXPANDING END */
+    
+    /* REMOVE URL RESULT PADDING START */
+    .urlbarView {
+        margin-inline: 0 !important;
+        width: 100% !important;
+    }
+
+    .urlbarView-row {
+        padding-block: 0 !important;
+    }
+    /* REMOVE URL RESULT PADDING END */
+    
+    /* MOVE URL RESULT TYPE ICON TO LEFT START */
+    .urlbarView-type-icon {
+        min-width: 16px !important;
+        height: 16px !important;
+        margin-bottom: 0 !important;
+        margin-inline-start: 0 !important;
+    }
+    
+    .urlbarView-favicon {
+        margin-inline-start: 20px !important;
+    }
+    /* MOVE URL RESULT TYPE ICON TO LEFT END */
+
+    /* DISPLAY GO BUTTON WHEN TYPING START */
+    #urlbar-input-container[pageproxystate="invalid"] #urlbar-go-button {
+        display: block !important;
+    }
+    /* DISPLAY GO BUTTON WHEN TYPING END */
+
+    /* ALWAYS SHOW PAGE ACTIONS START */
+    /* DISABLED BY DEFAULT - UNCOMMENT TO ENABLE */
+    /*#pageActionButton {
+        display: block !important;
+    }*/
+    /* ALWAYS SHOW PAGE ACTIONS END */
 }
-*/
+/* REMOVE MEGABAR END */
+
+/* REMOVE BLUE LINE ON TOP*/
+#TabsToolbar .tabbrowser-tab[selected] .tab-line {
+    display: none !important;
+}
